2010-07-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readbinary): Regardless of the current timefmt
	setting, if we are reading time data from a binary file it will come in
	as a floating point value rather than as a string.  So we can treat it
	like any other binary value.
	Thanks to Thomas Sefzick for pointing this out.

2010-06-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_key):  Accept "set key tc variable"

2010-06-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c src/gadgets.h src/graphics.c src/plot2d.c src/save.c
	src/set.c src/show.c src/tables.c src/tables.h src/unset.c
	docs/gnuplot.doc:

	New style element "set style circle radius <R>" specifies a default
	radius for function plots or 2-column data plots drawn "with circles".

2010-06-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots): Function plots should not be affected by
	the current setting of "boxwidth" unless they really do contain boxes.
	Bugfix
	
2010-06-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.h: Add in missing fields of object initializers.

2010-06-11  Peter Juhasz

	* src/graphics.c (boundary):  More correct fix for distorted
	vertical size of subplots in a multiplot.

2010-06-11  Peter Juhasz

	* src/graphics.c (boundary):  More correct fix for distorted
	vertical size of subplots in a multiplot.

2010-06-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary):  Fix a type that can distort the
	vertical size of subplots in a multiplot.

2010-05-30  Ethan A Merritt  <merritt@u.washington.edu>
	
	* docs/gnuplot.doc:  Document recently added %s time format
	(seconds since start of 2000).

2010-05-24  Ethan A Merritt  <merritt@u.washington.edu>
	
	* src/graph3d.c (do_3dplot):  Remove a restriction that limited depth-
	sorting of pm3d surfaces to those which were adjacent in the splot
	command.  If there was a reason for the original restriction, that 