@@ -14,6 +14,7 @@ New features, changes and fixes since gnuplot version 4.4.0
 * FIX font ",size" in non-enhanced mode postscript terminals
 * FIX Do a better job of estimating the width of UTF-8 encoded strings
 * FIX baseline bug in canvas terminal rotation of enhanced text
+* FIX Allow "with labels" to work for binary input data
 * CHANGE depth-sorting of pm3d surfaces now applies jointly to all in the plot
 * CHANGE 3D impulses are now always drawn from z=0
 * CHANGE Enable HIDDEN_QUADTREE by default
