@@ -6,6 +6,11 @@
 	like any other binary value.
 	Thanks to Thomas Sefzick for pointing this out.
 
+	* src/datafile.c (df_readbinary): In binary mode, string-valued
+	functions were silently ignored.  Fix this, thus allowing binary files
+	to be plotted "with labels".  For example:
+	plot 'foo' binary format='%double' using 0:1:("A") with labels
+
 2010-06-28  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/set.c (set_key):  Accept "set key tc variable"
